src/objects/PE_Program_Detail__c.object
<CustomObject>
    <description>This Object stores the Technology and Track level information of an Enterprise Partner from MSI SFDC.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Lookup to the Account to which the technology is added</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PE Program Details</relationshipLabel>
        <relationshipName>MPE_Program_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <picklist>
            <picklistValues>
                <fullName>Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Market Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eTailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Application Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Systems Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <description>Stores the Engagement level of the Program</description>
        <label>Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSI_Program_Detail_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores the ID of Program Details from MSI SFDC</description>
        <externalId>true</externalId>
        <label>MSI Program Detail ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Specialization_Type__c</fullName>
        <label>Specialization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stores the status of the Program associated with the partner</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Segment__c</fullName>
        <label>Technology Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Radio Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional and Commercial Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PE Program Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Community__c</columns>
        <columns>Specialization_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Technology_Segment__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Engagement_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>Value Added Distributor</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PE Program Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PE Program Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>